@startuml Vue Logique - Diagramme de Classes

' Définition des classes
class Categorie {
  +id: Integer <<PK>>
  +nom: String
  +description: String
}

class Produit {
  +id: Integer <<PK>>
  +code: String <<unique>>
  +nom: String
  +description: String
  +prix: Float
  +quantite_stock: Integer
  +categorie_id: Integer <<FK>>
}

class Caisse {
  +id: Integer <<PK>>
  +numero: Integer <<unique>>
  +nom: String
}

class Vente {
  +id: Integer <<PK>>
  +date_heure: DateTime
  +montant_total: Float
  +caisse_id: Integer <<FK>>
}

class LigneVente {
  +id: Integer <<PK>>
  +quantite: Integer
  +prix_unitaire: Float
  +vente_id: Integer <<FK>>
  +produit_id: Integer <<FK>>
}

' Définition des relations
Categorie "1" -- "0..*" Produit : contient >
Produit "1" -- "0..*" LigneVente : figure dans >
Caisse "1" -- "0..*" Vente : enregistre >
Vente "1" -- "0..*" LigneVente : contient >
LigneVente "0..*" -- "1" Produit : concerne >

' Ajouter un titre
title Système de Caisse de Magasin - Modèle de Données

' Ajouter une légende
legend right
  <b>Vue Logique - Diagramme de Classes</b>
  
  Ce diagramme présente les principales entités 
  du système de caisse et leurs relations.
endlegend

@enduml 